--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 id="logo">WorldTouring</h1>
         <ul class="main-head-nav-menu">
           <li class="menu-item"><a href="#locations">Locations</a></li>
-          <li class="menu-item"><a href="#Benefits">Benefits</a></li>
+          <li class="menu-item"><a href="#benifits">Benefits</a></li>
           <li class="menu-item"><a href="#contact">Contacts</a></li>
         </ul>
       </nav>
